Quite el enlace de Eventos privados

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <a href="" class="navbar__enlace navbar__enlace--active">Inicio</a>
       <a href="" class="navbar__enlace">Cuartos</a>
       <a href="" class="navbar__enlace">Restaurante</a>
-      <a href="" class="navbar__enlace">Eventos privados</a>
+      <!-- <a href="" class="navbar__enlace">Eventos privados</a> -->
       <a href="" class="navbar__enlace">Contacto</a>
       <a
         href="https://www.hotelscombined.com/Hotel/Grand_International_Hotel.htm"
