Agrege la sección llamada banner, creo que le cambiare el nombre en un futuro

--- a/index.html
+++ b/index.html
@@ -39,13 +39,37 @@
 
     <main class="contenido-principal container">
       <div class="banner">
-        <div class="banner__contenedor">
+        <div class="banner__contenedor banner__contenedor--1">
+          <div class="banner__contenedor__texto">
+            <h2 class="no-margin banner__contenedor__texto__title">
+              Grand international hotel
+            </h2>
+            <a href="" class="banner__contenedor__texto__link"
+              >Reservar en linea <span>+</span></a
+            >
+          </div>
           <!-- <img src="img/hotel_fachada.jpg" alt="" /> -->
         </div>
-        <div class="banner__contenedor">
+        <div class="banner__contenedor banner__contenedor--2">
+          <div class="banner__contenedor__texto">
+            <h2 class="no-margin banner__contenedor__texto__title">
+              Habitaciones y tarifas
+            </h2>
+            <a href="" class="banner__contenedor__texto__link"
+              >Ver Habitaciones <span>+</span></a
+            >
+          </div>
           <!-- <img src="img/hotel_fachada.jpg" alt="" /> -->
         </div>
-        <div class="banner__contenedor">
+        <div class="banner__contenedor banner__contenedor--3">
+          <div class="banner__contenedor__texto">
+            <h2 class="no-margin banner__contenedor__texto__title">
+              Restaurante y comidas
+            </h2>
+            <a href="" class="banner__contenedor__texto__link"
+              >Ver Comidas <span>+</span></a
+            >
+          </div>
           <!-- <img src="img/hotel_fachada.jpg" alt="" /> -->
         </div>
       </div>
