Agregando la seccion de historia del hotel

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
               >Reservar en linea <span>+</span></a
             >
           </div>
-          <!-- <img src="img/hotel_fachada.jpg" alt="" /> -->
+          <!-- Fin  banner -->
         </div>
         <div class="banner__contenedor banner__contenedor--2">
           <div class="banner__contenedor__texto">
@@ -59,7 +59,7 @@
               >Ver Habitaciones <span>+</span></a
             >
           </div>
-          <!-- <img src="img/hotel_fachada.jpg" alt="" /> -->
+          <!-- Fin banner -->
         </div>
         <div class="banner__contenedor banner__contenedor--3">
           <div class="banner__contenedor__texto">
@@ -70,9 +70,35 @@
               >Ver Comidas <span>+</span></a
             >
           </div>
-          <!-- <img src="img/hotel_fachada.jpg" alt="" /> -->
+        </div>
+        <!-- Fin  banner -->
+      </div>
+      <!-- Fin de sección Banners -->
+      <div class="Description__hotel">
+        <h2 class="Description__hotel__title">
+          Grand International Hotel - hotel de 3 estrellas en el centro de la
+          ciudad de Panamá
+        </h2>
+        <div class="contenedor__description">
+          <img
+            src="img/hotel_fachada2.jpg"
+            alt=""
+            class="contenedor__description__image"
+          />
+          <p>
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ea
+            possimus nam nulla excepturi voluptatum eveniet exercitationem optio
+            laborum vero voluptatem cum ipsam, maxime, omnis veritatis non, eius
+            blanditiis. Perspiciatis, laudantium? Lorem, ipsum dolor sit amet
+            consectetur adipisicing elit. Minima deleniti aperiam iure. Tenetur
+            voluptatibus rerum temporibus cumque, quod est atque eveniet
+            accusantium, mollitia repudiandae porro earum deleniti aperiam dolor
+            tempora?
+          </p>
         </div>
       </div>
+
+      <!-- Fin sección  -->
     </main>
   </body>
 </html>
