agregue el footer y prepare el titulo para la seccion de cuartos en la pagina incial

--- a/index.html
+++ b/index.html
@@ -74,10 +74,9 @@
         <!-- Fin  banner -->
       </div>
       <!-- Fin de sección Banners -->
-      <div class="Description__hotel">
-        <h2 class="Description__hotel__title">
-          Grand International Hotel - hotel de 3 estrellas en el centro de la
-          ciudad de Panamá
+      <div class="description__hotel">
+        <h2 class="content-title no-margin border-dashed">
+          Grand International Hotel
         </h2>
         <div class="contenedor__description">
           <img
@@ -85,20 +84,37 @@
             alt=""
             class="contenedor__description__image"
           />
-          <p>
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ea
-            possimus nam nulla excepturi voluptatum eveniet exercitationem optio
-            laborum vero voluptatem cum ipsam, maxime, omnis veritatis non, eius
-            blanditiis. Perspiciatis, laudantium? Lorem, ipsum dolor sit amet
-            consectetur adipisicing elit. Minima deleniti aperiam iure. Tenetur
-            voluptatibus rerum temporibus cumque, quod est atque eveniet
-            accusantium, mollitia repudiandae porro earum deleniti aperiam dolor
-            tempora?
-          </p>
+          <div class="contenedor__description__text_b">
+            <p class="contenedor__description__text no-margin">
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ea
+              possimus nam nulla excepturi voluptatum eveniet exercitationem
+              optio laborum vero voluptatem cum ipsam, maxime, omnis veritatis
+              non, eius blanditiis. Perspiciatis, laudantium? Lorem, ipsum dolor
+              sit amet consectetur adipisicing elit. Minima deleniti aperiam
+              iure. Tenetur klasd kasdmak kasdkas kasldlas liq3oewqm jkdjas dj
+            </p>
+
+            <p class="contenedor__description__text">
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ea
+              possimus nam nulla excepturi voluptatum eveniet exercitationem
+              optio laborum vero voluptatem cum ipsam, maxime, omnis veritatis
+            </p>
+          </div>
         </div>
+      </div>
+
+      <div class="contenedor__rooms">
+        <h2 class="no-margin border-dashed content-title">
+          Habitaciones Grand international hotel
+        </h2>
       </div>
 
       <!-- Fin sección  -->
     </main>
+    <footer class="footer no-margin">
+      <!-- <div class="containers"> -->
+      <p class="no-margin center-text">&copy; 2021 Grand International Hotel</p>
+      <!-- </div> -->
+    </footer>
   </body>
 </html>
