agregue la sección de cuartos

--- a/index.html
+++ b/index.html
@@ -102,11 +102,52 @@
           </div>
         </div>
       </div>
-
+      <!-- Fin sección  -->
       <div class="contenedor__rooms">
         <h2 class="no-margin border-dashed content-title">
           Habitaciones Grand international hotel
         </h2>
+
+        <div class="contenedor__rooms__info">
+          <div class="room">
+            <img src="img/rooms/room1.jpg" alt="" />
+            <div class="room__info">
+              <h3 class="titulo-h3">Cuarto Deluxe</h3>
+              <p class="room__info__text">2 adultos / 2 camas</p>
+            </div>
+          </div>
+
+          <!-- fin de seccion cuarto -->
+
+          <div class="room">
+            <img src="img/rooms/room2.jpg" alt="" />
+            <div class="room__info">
+              <h3 class="titulo-h3">Cuarto Deluxe</h3>
+              <p class="room__info__text">2 adultos / 2 camas</p>
+            </div>
+          </div>
+
+          <!-- fin de seccion cuarto -->
+
+          <div class="room">
+            <img src="img/rooms/room3.jpg" alt="" />
+            <div class="room__info">
+              <h3 class="titulo-h3">Cuarto Deluxe</h3>
+              <p class="room__info__text">2 adultos / 2 camas</p>
+            </div>
+          </div>
+          <!-- fin de seccion cuarto -->
+
+          <div class="room">
+            <img src="img/rooms/room4.jpg" alt="" />
+            <div class="room__info">
+              <h3 class="titulo-h3">Cuarto Deluxe</h3>
+              <p class="room__info__text">2 adultos / 2 camas</p>
+            </div>
+          </div>
+
+          <!-- fin de seccion cuarto -->
+        </div>
       </div>
 
       <!-- Fin sección  -->
