Cambios hechos el 31-3-2021

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <body>
     <nav class="navbar">
       <a href="" class="navbar__enlace navbar__enlace--active">Inicio</a>
-      <a href="" class="navbar__enlace">Cuartos</a>
+      <a href="" class="navbar__enlace">Habitaciones</a>
       <a href="" class="navbar__enlace">Restaurante</a>
       <!-- <a href="" class="navbar__enlace">Eventos privados</a> -->
       <a href="" class="navbar__enlace">Contacto</a>
@@ -44,7 +44,9 @@
             <h2 class="no-margin banner__contenedor__texto__title">
               Grand international hotel
             </h2>
-            <a href="" class="banner__contenedor__texto__link"
+            <a
+              href="https://www.hotelscombined.com/Hotel/Grand_International_Hotel.htm"
+              class="banner__contenedor__texto__link"
               >Reservar en linea <span>+</span></a
             >
           </div>
@@ -113,7 +115,7 @@
             <img src="img/rooms/room1.jpg" alt="" />
             <div class="room__info">
               <h3 class="titulo-h3">Cuarto Deluxe</h3>
-              <p class="room__info__text">2 adultos / 2 camas</p>
+              <p class="info__text">2 adultos / 2 camas</p>
             </div>
           </div>
 
@@ -123,7 +125,7 @@
             <img src="img/rooms/room2.jpg" alt="" />
             <div class="room__info">
               <h3 class="titulo-h3">Cuarto Deluxe</h3>
-              <p class="room__info__text">2 adultos / 2 camas</p>
+              <p class="info__text">2 adultos / 2 camas</p>
             </div>
           </div>
 
@@ -133,7 +135,7 @@
             <img src="img/rooms/room3.jpg" alt="" />
             <div class="room__info">
               <h3 class="titulo-h3">Cuarto Deluxe</h3>
-              <p class="room__info__text">2 adultos / 2 camas</p>
+              <p class="info__text">2 adultos / 2 camas</p>
             </div>
           </div>
           <!-- fin de seccion cuarto -->
@@ -142,7 +144,7 @@
             <img src="img/rooms/room4.jpg" alt="" />
             <div class="room__info">
               <h3 class="titulo-h3">Cuarto Deluxe</h3>
-              <p class="room__info__text">2 adultos / 2 camas</p>
+              <p class="info__text">2 adultos / 2 camas</p>
             </div>
           </div>
 
