agregando los titulos de las secciones restantes

--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
   </head>
   <body>
     <nav class="navbar">
-      <a href="" class="navbar__enlace navbar__enlace--active">Inicio</a>
-      <a href="" class="navbar__enlace">Habitaciones</a>
-      <a href="" class="navbar__enlace">Restaurante</a>
+      <a href="#inicio" class="navbar__enlace navbar__enlace--active">Inicio</a>
+      <a href="#habitaciones" class="navbar__enlace">Habitaciones</a>
+      <a href="#comidas" class="navbar__enlace">Restaurante</a>
       <!-- <a href="" class="navbar__enlace">Eventos privados</a> -->
-      <a href="" class="navbar__enlace">Contacto</a>
+      <a href="#contacto" class="navbar__enlace">Contacto</a>
       <a
         href="https://www.hotelscombined.com/Hotel/Grand_International_Hotel.htm"
         class="boton"
@@ -38,7 +38,7 @@
     </header>
 
     <main class="contenido-principal container">
-      <div class="banner">
+      <div class="banner padding-seccions-2">
         <div class="banner__contenedor banner__contenedor--1">
           <div class="banner__contenedor__texto">
             <h2 class="no-margin banner__contenedor__texto__title">
@@ -57,7 +57,7 @@
             <h2 class="no-margin banner__contenedor__texto__title">
               Habitaciones y tarifas
             </h2>
-            <a href="" class="banner__contenedor__texto__link"
+            <a href="#habitaciones" class="banner__contenedor__texto__link"
               >Ver Habitaciones <span>+</span></a
             >
           </div>
@@ -68,7 +68,7 @@
             <h2 class="no-margin banner__contenedor__texto__title">
               Restaurante y comidas
             </h2>
-            <a href="" class="banner__contenedor__texto__link"
+            <a href="#comidas" class="banner__contenedor__texto__link"
               >Ver Comidas <span>+</span></a
             >
           </div>
@@ -76,7 +76,7 @@
         <!-- Fin  banner -->
       </div>
       <!-- Fin de sección Banners -->
-      <div class="description__hotel">
+      <div class="description__hotel padding-seccions-2">
         <h2 class="content-title no-margin border-dashed">
           Grand International Hotel
         </h2>
@@ -105,7 +105,7 @@
         </div>
       </div>
       <!-- Fin sección  -->
-      <div class="contenedor__rooms">
+      <div class="contenedor__rooms padding-seccions-2" id="habitaciones">
         <h2 class="no-margin border-dashed content-title">
           Habitaciones Grand international hotel
         </h2>
@@ -153,6 +153,20 @@
       </div>
 
       <!-- Fin sección  -->
+
+      <!-- Secccion de comidas y restaurante -->
+      <div class="contenedor__comidas padding-seccions-2" id="comidas">
+        <h2 class="no-margin border-dashed content-title">
+          Restaurante y comidas
+        </h2>
+      </div>
+
+      <!-- Fin seccion de comidas y restaurante -->
+
+      <!-- seccion de contacto -->
+      <div class="contenedor__contacto padding-seccions-2" id="contacto">
+        <h2 class="no-margin border-dashed content-title">Contacto</h2>
+      </div>
     </main>
     <footer class="footer no-margin">
       <!-- <div class="containers"> -->
