Agregando la sección de contactos

--- a/index.html
+++ b/index.html
@@ -166,6 +166,59 @@
       <!-- seccion de contacto -->
       <div class="contenedor__contacto padding-seccions-2" id="contacto">
         <h2 class="no-margin border-dashed content-title">Contacto</h2>
+
+        <div class="contacto">
+          <div class="contacto__contenido">
+            <h3 class="no-margin">Contacto para resevaciones</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Repellendus cumque soluta nemo aut deleniti possimus magnam, nihil
+              repudiandae quasi ratione debitis in ducimus id rerum neque et at
+              ullam eius?
+            </p>
+            <p>
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Impedit
+              quae magnam dignissimos error beatae, eius veritatis sequi illo.
+            </p>
+            <ul>
+              <li>Teléfono móvil / Whataspp:</li>
+              <li>Teléfono fijo:</li>
+              <li>Email:</li>
+            </ul>
+          </div>
+          <!-- fin contenido contacto -->
+          <form action="" class="formulario">
+            <h3 class="no-margin">Formulario de contacto</h3>
+            <div class="formulario__inputs">
+              <div class="campo_formulario">
+                <label for="nombre">Nombre:</label>
+                <input type="text" name="nombre" value="" />
+              </div>
+
+              <div class="campo_formulario">
+                <label for="numero">Número Celular:</label>
+                <input type="tel" name="numero" value="" id="numero" />
+              </div>
+
+              <div class="campo_formulario">
+                <label for="email">Email:</label>
+                <input type="email" name="email" />
+              </div>
+
+              <div class="campo_formulario">
+                <label for="tema">Motivo de contacto:</label>
+                <input type="text" name="tema" value="" />
+              </div>
+
+              <div class="campo_formulario campo_formulario--textarea">
+                <label for="mensaje">Mensaje:</label>
+                <textarea name="mensaje" id="textarea"></textarea>
+              </div>
+            </div>
+
+            <input type="button" class="boton boton-enviar" value="Enviar" />
+          </form>
+        </div>
       </div>
     </main>
     <footer class="footer no-margin">
