agragando el efecto de scroll

--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
   <body>
     <nav class="navbar">
       <a href="#inicio" class="navbar__enlace navbar__enlace--active">Inicio</a>
-      <a href="#habitaciones" class="navbar__enlace">Habitaciones</a>
-      <a href="#comidas" class="navbar__enlace">Restaurante</a>
+      <a href="#habitaciones" class="navbar__enlace scrollable">Habitaciones</a>
+      <a href="#comidas" class="navbar__enlace scrollable">Restaurante</a>
       <!-- <a href="" class="navbar__enlace">Eventos privados</a> -->
-      <a href="#contacto" class="navbar__enlace">Contacto</a>
+      <a href="#contacto" class="navbar__enlace scrollable">Contacto</a>
       <a
         href="https://www.hotelscombined.com/Hotel/Grand_International_Hotel.htm"
         class="boton"
@@ -226,5 +226,7 @@
       <p class="no-margin center-text">&copy; 2021 Grand International Hotel</p>
       <!-- </div> -->
     </footer>
+
+    <script src="js/app.js"></script>
   </body>
 </html>
