agregando efectos con javascript

--- a/index.html
+++ b/index.html
@@ -57,7 +57,9 @@
             <h2 class="no-margin banner__contenedor__texto__title">
               Habitaciones y tarifas
             </h2>
-            <a href="#habitaciones" class="banner__contenedor__texto__link"
+            <a
+              href="#habitaciones"
+              class="banner__contenedor__texto__link scrollable"
               >Ver Habitaciones <span>+</span></a
             >
           </div>
@@ -68,7 +70,9 @@
             <h2 class="no-margin banner__contenedor__texto__title">
               Restaurante y comidas
             </h2>
-            <a href="#comidas" class="banner__contenedor__texto__link"
+            <a
+              href="#comidas"
+              class="banner__contenedor__texto__link scrollable"
               >Ver Comidas <span>+</span></a
             >
           </div>
@@ -76,7 +80,7 @@
         <!-- Fin  banner -->
       </div>
       <!-- Fin de sección Banners -->
-      <div class="description__hotel padding-seccions-2">
+      <section class="description__hotel padding-seccions-2">
         <h2 class="content-title no-margin border-dashed">
           Grand International Hotel
         </h2>
@@ -103,7 +107,7 @@
             </p>
           </div>
         </div>
-      </div>
+      </section>
       <!-- Fin sección  -->
       <div class="contenedor__rooms padding-seccions-2" id="habitaciones">
         <h2 class="no-margin border-dashed content-title">
@@ -223,7 +227,9 @@
     </main>
     <footer class="footer no-margin">
       <!-- <div class="containers"> -->
-      <p class="no-margin center-text">&copy; 2021 Grand International Hotel</p>
+      <p class="no-margin center-text">
+        &copy; 2021 Grand International Hotel todos los derechos reservados.
+      </p>
       <!-- </div> -->
     </footer>
 
