agregando un boton para subir al top

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <title>Nombre de Hotel</title>
   </head>
   <body>
-    <nav class="navbar">
+    <nav class="navbar" id="inicio">
       <a href="#inicio" class="navbar__enlace navbar__enlace--active">Inicio</a>
       <a href="#habitaciones" class="navbar__enlace scrollable">Habitaciones</a>
       <a href="#comidas" class="navbar__enlace scrollable">Restaurante</a>
@@ -36,8 +36,12 @@
         </p>
       </div>
     </header>
-
     <main class="contenido-principal container">
+      <div class="flecha">
+        <a href="#inicio" class="scrollable2">
+          <i class="fas fa-arrow-up" data-href-link="#inicio"></i>
+        </a>
+      </div>
       <div class="banner padding-seccions-2">
         <div class="banner__contenedor banner__contenedor--1">
           <div class="banner__contenedor__texto">
