--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
       </div>
     </header>
     <main class="contenido-principal container">
-      <div class="flecha">
-        <a href="#inicio" class="scrollable2">
+      <div class="flecha" data-href-link="#inicio">
+        <a href="#inicio" class="scrollable2" data-href-link="#inicio">
           <i class="fas fa-arrow-up" data-href-link="#inicio"></i>
         </a>
       </div>
@@ -163,11 +163,45 @@
       <!-- Fin sección  -->
 
       <!-- Secccion de comidas y restaurante -->
-      <div class="contenedor__comidas padding-seccions-2" id="comidas">
+      <section class="contenedor__comidas padding-seccions-2" id="comidas">
         <h2 class="no-margin border-dashed content-title">
           Restaurante y comidas
         </h2>
-      </div>
+
+        <div class="contenedor__restaurante">
+          <div class="imagen">
+            <img
+              src="img/comida.jpg"
+              alt="grand international hotel restaurante"
+            />
+          </div>
+          <div class="texto">
+            <p class="contenedor__description__text">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt
+              sequi dolorem, ab ipsa qui libero! Ratione labore rerum facilis
+              placeat, architecto reiciendis laboriosam libero, nulla
+              asperiores, cumque aut itaque mollitia!
+            </p>
+          </div>
+        </div>
+
+        <div class="galeria-platillos">
+          <div class="platillo">
+            <img src="img/comida.jpg" alt="platillo" />
+            <h3 class="titulo-h3">arroz con pollo</h3>
+          </div>
+
+          <div class="platillo">
+            <img src="img/comida.jpg" alt="platillo" />
+            <h3 class="titulo-h3">arroz con pollo</h3>
+          </div>
+
+          <div class="platillo">
+            <img src="img/comida.jpg" alt="platillo" />
+            <h3 class="titulo-h3">arroz con pollo</h3>
+          </div>
+        </div>
+      </section>
 
       <!-- Fin seccion de comidas y restaurante -->
 
@@ -240,3 +274,6 @@
     <script src="js/app.js"></script>
   </body>
 </html>
+<!-- 
+anualidad 75$
+1.91% pasa fecha corte de -->
