--- a/index.html
+++ b/index.html
@@ -187,18 +187,18 @@
 
         <div class="galeria-platillos">
           <div class="platillo">
-            <img src="img/comida.jpg" alt="platillo" />
+            <img src="img/platillos/arroz-con-pollo.jpg" alt="platillo" />
             <h3 class="titulo-h3">arroz con pollo</h3>
           </div>
 
           <div class="platillo">
-            <img src="img/comida.jpg" alt="platillo" />
-            <h3 class="titulo-h3">arroz con pollo</h3>
+            <img src="img/platillos/pizza.jpg" alt="platillo" />
+            <h3 class="titulo-h3">Pizza</h3>
           </div>
 
           <div class="platillo">
-            <img src="img/comida.jpg" alt="platillo" />
-            <h3 class="titulo-h3">arroz con pollo</h3>
+            <img src="img/platillos/patacones-pescado.jpg" alt="platillo" />
+            <h3 class="titulo-h3">Patacones con pescado frito</h3>
           </div>
         </div>
       </section>
