agregando la seccion de restaurante

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     ></script>
     <link rel="stylesheet" href="css/normalized.css" type="text/css" />
     <link rel="stylesheet" href="css/style.css" type="text/css" />
-    <title>Nombre de Hotel</title>
+    <title>Grand International Hotel</title>
   </head>
   <body>
     <nav class="navbar" id="inicio">
@@ -31,9 +31,7 @@
     <header class="header">
       <div class="header__nombre container">
         <h1 class="header__titulo no-margin">Grand International Hotel</h1>
-        <p class="header__description">
-          Hotel en la ciudad de Panamá 4 estrellas
-        </p>
+        <p class="header__description">Tu hotel en el centro de la ciudad</p>
       </div>
     </header>
     <main class="contenido-principal container">
